Update 'lyocbm5fn-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:11c8eb9855b27273ee616417e86b7e10c8b1e3f9@sha256:b4321da69caf660cb8b1285213a237cb663ada37e61c81d1b6af13b33c2cb354

--- a/components/lyocbm5fn-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/lyocbm5fn-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: lyocbm5fn-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:11c8eb9855b27273ee616417e86b7e10c8b1e3f9@sha256:b4321da69caf660cb8b1285213a237cb663ada37e61c81d1b6af13b33c2cb354
+          name: container-image
